# homelab-ops

./: .gitignore  CLAUDE.md  GEMINI.md  justfile
.claude/: settings.json
.claude/agents/: manifest-reviewer.md
.claude/hooks/: validate.sh
.claude/memory/: cluster.md  defects.md
.claude/skills/new-app/: SKILL.md
apps/: data-ops.yaml  home-ops.yaml  net-utils.yaml  system.yaml
apps/bluesky-producer/: deployment.yaml
argocd/applications/: bluesky-trends.yaml
argocd/applicationsets/: infra-appset.yaml  tenant-apps.yaml  tenant-appset.yaml
docs/: INCIDENT-2025-12-27.md
infrastructure/argocd-tailscale-proxy/: service.yaml
infrastructure/kafka-cluster/: bluesky-posts-topic.yaml  kafka.yaml  kustomization.yaml
infrastructure/sealed-secrets/: kustomization.yaml
infrastructure/strimzi-operator/: kustomization.yaml
infrastructure/tailscale-operator/: kustomization.yaml
platform-sdk/: pyproject.toml
platform-sdk/src/homelab_sdk/: __init__.py  compute.py
